--- a/public/.htaccess.example
+++ b/public/.htaccess.example
@@ -2,7 +2,7 @@
 <IfModule mod_rewrite.c>
 	Options -Multiviews
 	RewriteEngine On
-	RewriteBase /public
+	RewriteBase /BeautyWayPhp/public
 	# RewriteBase /scrum-panel/public
 	RewriteCond %{REQUEST_FILENAME} !-d
 	RewriteCond %{REQUEST_FILENAME} !-f
