--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 
-#input.css
-#package.json
+# input.css
+# package.json
 package-lock.json
-#tailwind.config.js
+# tailwind.config.js
 node_modules
-#*.sh
+*.sh
 # evitar carga de archivos con informacion privada
-#public/.htaccess
-#app/config/config.php
+public/.htaccess
+app/config/config.php
